--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -46,6 +46,7 @@ jobs:
         run: |
           pip install pytest
           pip install -e .
+          pip install tests/requirements.txt
           pip freeze
 
       - name: Tests
