--- a/.gitignore
+++ b/.gitignore
@@ -139,17 +139,11 @@ data
 ?
 *.download
 *.index
-*.txt
-*.py
-*.sh
 *.out
 *.1
-!setup.py
-!tests/*.py
-!tests/requirements.txt
-!ecmwf/**/*.py
 test.*
 *.bufr
-!tools/**/*.py
 done
 *.raw
+?.*
+TODO
