--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,6 @@
 [flake8]
-; ignore = E226,E302,E41
 max-line-length = 120
-; exclude = tests/*
-; See https://black.readthedocs.io/en/stable/the_black_code_style.html
+; See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices
 extend-ignore = E203
 [isort]
 profile=black
