--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -8,8 +8,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        platform: ["ubuntu-latest", "macos-latest"]
+        python-version: ["3.9", "3.10", "3.11" ]
 
     name: Python  ${{ matrix.python-version }} on ${{ matrix.platform }}
     runs-on: ${{ matrix.platform }}
